Change alignment of nav dropdown to right aligned only on right side, and add copyright icon to footer & fix size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,7 +344,7 @@ img.floating-section {
     font-size: 1.2rem;
 }
 
-#footer i {
+#footer .social-media-icon {
     font-size: 3rem;
 }
 
